✅  Calendar  part done

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^7.3.2",
+    "dayjs": "^1.11.11",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
