--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1"
