--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mui/x-date-pickers": "^7.3.2",
     "dayjs": "^1.11.11",
     "firebase": "^10.8.1",
+    "primereact": "^10.6.5",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-hot-toast": "^2.4.1",
