--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@mui/x-date-pickers": "^7.3.2",
     "dayjs": "^1.11.11",
     "firebase": "^10.8.1",
-    "material-ui-dropzone": "^3.5.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
     "react": "^18.2.0",
@@ -33,7 +32,8 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
