--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.11",
     "@mui/x-date-pickers": "^7.3.2",
+    "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
     "firebase": "^10.8.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-hot-toast": "^2.4.1",
