--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
     "firebase": "^10.8.1",
+    "framer-motion": "^11.2.12",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
     "react": "^18.2.0",
